# replay

./: .env.example  .gitignore  Fase_3.md  Fase_4.md  Fase_5.md  Fase_6.md  Fase_7.md  PRD_v2.md  README.md  prd_sports_highlights_saas.html  pyproject.toml
app/: config.py  database.py  main.py
app/admin/: __init__.py  router.py  schemas.py
app/application/: __init__.py
app/application/camera/: __init__.py  use_cases.py
app/application/ttl/: __init__.py  use_cases.py
app/auth/: __init__.py  router.py  schemas.py  service.py
app/camera/: __init__.py  dependencies.py  router.py  schemas.py
app/core/: exceptions.py  logging_config.py  security.py
app/domain/: __init__.py
app/domain/camera/: __init__.py  entities.py  interfaces.py
app/infrastructure/: __init__.py
app/infrastructure/camera/: __init__.py  opencv_adapter.py
app/infrastructure/scheduler/: __init__.py  apscheduler.py
app/infrastructure/video/: __init__.py  ffmpeg_writer.py
app/moments/: __init__.py  dependencies.py  router.py  schemas.py
app/videos/: __init__.py  models.py  router.py  schemas.py  service.py
sports-highlights-frontend/: README.md  index.html  package-lock.json  package.json
sports-highlights-frontend/src/: App.tsx  index.css
sports-highlights-frontend/src/contexts/: AuthContext.tsx
sports-highlights-frontend/src/hooks/: useApi.ts  useCameraStatus.ts  useSaveMoment.ts  useVideos.ts
sports-highlights-frontend/src/lib/: api.ts  routes.ts
sports-highlights-frontend/src/pages/: DashboardPage.tsx  (+2 more)
tests/: conftest.py  test_auth.py  test_ttl.py  test_videos.py
(+10 files in other folders)
