[project]
name = "sports-highlights-backend"
version = "0.1.0"
description = "Backend do Sports Highlights - Captura de momentos esportivos"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "opencv-python-headless>=4.13.0.92",
    "apscheduler>=3.10.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
